# django-cbv-inspect

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  notes.md  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: release.yml  test.yml
books/: admin.py  class_deco.py  forms.py  middleware.py  mixins.py  models.py  urls.py  views.py  views2.py
books/migrations/: 0001_initial.py
cbv_inspect/: apps.py  decorators.py  middleware.py  mixins.py  utils.py  views.py
cbv_inspect/templates/cbv_inspect/: toolbar.html
cbv_inspect/templates/django_cbv_inspect/: cbv_logs.html
django_cbv_inspect/: apps.py  decorators.py  middleware.py  mixins.py  urls.py  utils.py  views.py
django_cbv_inspect/templates/django_cbv_inspect/: cbv_logs.html  cbv_logs2.html
example/: manage.py
example/books/: admin.py  apps.py  models.py  urls.py  views.py
example/books/fixtures/: fake_data.json
example/books/templates/: base.html
example/books/templates/books/: book_confirm_delete.html  book_detail.html  book_form.html  book_list.html  hello.html
example/project/: asgi.py  settings.py  urls.py
inspector/: __init__.py  middleware.py  mixins.py
inspector/templates/: cbv_logs.html
templates/: base.html
templates/books/: author_form.html  book_detail.html  book_form.html  book_list.html
testproject/: settings.py  urls.py
tests/: apps.py  models.py  settings.py  test_helpers.py  test_middleware.py  test_mixins.py  test_utils.py  urls.py  views.py
tests/templates/: base.html
