[tool.coverage.run]
branch = true
source = ["cbv_inspect"]
omit = [
    "*/__init__.py",
    "*/apps.py",
    "*/settings.py"
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100


[tool.black]
line-length = 100
extend-exclude = '''.*/migrations/.*\.py'''


[tool.isort]
profile = "black"
known_django = "django"
known_first_party = ["cbv_inspect", "example", "tests"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*"]


[tool.pycln]
all = true


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
