[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "django-cbv-inspect"
version = "0.1.15"
description = "A tool to inspect Django class-based views."
authors = [
    { name="Sangeeta Jadoonanan", email="sjbitcode@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = [
    "python",
    "django"
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=3.2"
]


[project.urls]
Homepage = "https://github.com/sjbitcode/django-cbv-inspect"
Download = "https://pypi.org/project/django-cbv-inspect"


[tool.setuptools]
include-package-data = true
packages = ["cbv_inspect", "cbv_inspect.templates.cbv_inspect"]


[tool.coverage.run]
branch = true
source = ["cbv_inspect"]
omit = [
    "*/__init__.py",
    "*/apps.py",
    "*/settings.py"
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100


[tool.black]
line-length = 100
extend-exclude = '''.*/migrations/.*\.py'''


[tool.isort]
profile = "black"
known_django = "django"
known_first_party = ["cbv_inspect", "example", "tests"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*"]


[tool.pycln]
all = true
