[metadata]
name = django-cbv-inspect
version = 0.1.6
description = A Django app to inspect class-based views
long_description = file: README.rst
author = Sangeeta Jadoonanan 
author_email = contact@sangeeta.io
url = https://github.com/sjbitcode/django-cbv-inspect
download_url = https://pypi.org/update-this-soon
license = MIT
license_files = LICENSE
keywords = django, python
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
    beautifulsoup4

[options.packages.find]
exclude =
    example
    tests
